# create-girl-friend

./: .all-contributorsrc  .gitignore  LICENSE  README.md  package.json
languages/Assembly/: Makefile  README.md
languages/Assembly/inc/: syscall.asm
languages/Assembly/src/: main.asm
languages/Bash/: README.md  girlfriend.bash
languages/Brainfuck/: Girlfriend.bf  README.md
languages/C#/: README.md
languages/C#/Beings/: Begins.sln
languages/C#/Beings/CreatePeople.Core/Events/: BreakUpArgs.cs  FallInLoveArgs.cs  MarryArgs.cs  PeopleEvents.cs
languages/C#/Beings/CreatePeople.Core/Exceptions/: NotFoundCurrentMateException.cs  NotToMarryException.cs  RelationshipException.cs
languages/C#/Beings/CreatePeople.Core/Models/: Boy.cs  Gender.cs  Girl.cs  (+2 more)
languages/C#/Beings/YouAndYourGirlfriendsDemo/: Program.cs  YouAndYourGirlfriendsDemo.csproj
languages/C++/: .gitignore  CMakeLists.txt  README.md
languages/C++/include/: Girl.hpp  Person.hpp
languages/C++/src/: Girl.cpp  Person.cpp  main.cpp
languages/Haskell/: Girlfriend.hs  README.md
languages/JavaScript/: .gitignore  README.md  package.json
languages/JavaScript/demo/: index.js
languages/JavaScript/lib/: Girl.js  Me.js  Person.js  Xp.js
languages/Python/: Girl.py  README.md  haogan.py  likability.py  me.py
languages/TypeScript/: .gitignore  README.md  package.json  tsconfig.json
languages/TypeScript/cli/: index.ts
languages/TypeScript/demo/: index.ts
languages/TypeScript/lib/: Girl.ts  Person.ts  Xp.ts
languages/TypeScript/src/: index.ts
languages/Wenyan/: README.md  書中自有顏如玉.wy
